//
// Copyright 2018 Peter Vrenken.
syntax = "proto3";
import "Data/Clients/_Grpc/_Model.proto";
package EtAlii.Ubigia.Api.Transport.Grpc.WireProtocol;

// The ContentDefinition Grpc service definition.
service ContentDefinitionGrpcService 
{
	rpc Get (ContentDefinitionGetRequest) returns (ContentDefinitionGetResponse) {}
	rpc Post (ContentDefinitionPostRequest) returns (ContentDefinitionPostResponse) {}
	rpc PostPart (ContentDefinitionPartPostRequest) returns (ContentDefinitionPartPostResponse) {}
}

message ContentDefinitionGetRequest
{
	Identifier EntryId = 1;
}

message ContentDefinitionGetResponse
{
	ContentDefinition ContentDefinition = 1;
}

message ContentDefinitionPostRequest
{
	Identifier EntryId = 1;
	ContentDefinition ContentDefinition = 2;
}

message ContentDefinitionPostResponse
{
}

message ContentDefinitionPartPostRequest
{
	Identifier EntryId = 1;
	fixed64 ContentDefinitionPartId = 2;
	ContentDefinitionPart ContentDefinitionPart = 3;
}

message ContentDefinitionPartPostResponse
{
}
